--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ credentials:
     attrition:
       password: '$2b$12$5Zqun2t.fYhmMX7e17VM7OoaD6ynHCH4pDCkiG7zs8F4ZWMF284l2'
       name: 'Employee Attrition Predictor'
+      email: morteyandrews@gmail.com
 
 cookie:
   expiry_days: 0
